# minilearn-zephyr

./: CMakeLists.txt  README.md  prj.conf
src/: main.c
src/matrix/: matrix.c  matrix.h
src/network_defs/: classifier.c  uwnet.h
src/utils/: data.c  image.h
